compiler-core/src/parse/snapshots/gleam_core__parse__tests__invalid_assignment_shorthand_modulo_equals.snap
---
source: compiler-core/src/parse/tests.rs
expression: "let wobble: Int = 32\nwobble %= 1"
---
----- SOURCE CODE
let wobble: Int = 32
wobble %= 1

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:2:8
  │
2 │ wobble %= 1
  │        ^^ Invalid assignment shorthand

Gleam does not support this assignment shorthand syntax, nor mutation
Hint: variables may be rebound with `let` and `=`
